--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
                     <img src="./image/iphn2.jpg" alt="image5">
                 </div>
                 <div class="slide-fade">
+                    <img src="./image/iphn2.jpg" alt="image5">
+                </div>
+                <div class="slide-fade">
                     <img src="./image/iphn3.jpg" alt="image6">
                 </div>
 
@@ -91,6 +94,7 @@
             <div class="phn2" ><img src="./image/product-item2.jpg" alt=""></div>
             <div class="phn3" ><img src="./image/product-item3.jpg" alt=""></div>
             <div class="phn4" ><img src="./image/product-item4.jpg" alt=""></div>
+            <div class="phn4" ><img src="./image/product-item4.jpg" alt=""></div>
             <div class="phn5" ><img src="./image/product-item5.jpg" alt=""></div>
           </div> 
 
@@ -104,6 +108,9 @@
                 </div>
                 <div class="slidea">
                     <img src="./image/re3.jpg" alt="Slide 3">
+                </div>
+                <div class="slidea">
+                    <img src="./image/re4.jpg" alt="Slide 3">
                 </div>
                 <div class="slidea">
                     <img src="./image/re4.jpg" alt="Slide 3">
