--- a/index.html
+++ b/index.html
@@ -120,6 +120,11 @@
                 </div>
             </div>
         </div>
+        <div class="ur">
+            <h1>
+                Your Order on the way
+            </h1>
+        </div>
 
  
 
