--- a/index.html
+++ b/index.html
@@ -85,12 +85,13 @@
             <span class="dot" onclick="currentSlide(3)"></span>
             <span class="dot" onclick="currentSlide(4)"></span>
             <span class="dot" onclick="currentSlide(5)"></span>
-            <span class="dot" onclick="currentSlide(6)"></span>
+        
           </div>
 
 
           <div class="phn">
             <div class="phn1" ><img src="./image/product-item1.jpg" alt=""></div>
+            <div class="phn2" ><img src="./image/product-item2.jpg" alt=""></div>
             <div class="phn2" ><img src="./image/product-item2.jpg" alt=""></div>
             <div class="phn3" ><img src="./image/product-item3.jpg" alt=""></div>
             <div class="phn4" ><img src="./image/product-item4.jpg" alt=""></div>
@@ -124,6 +125,7 @@
             <h1>
                 Your Order on the way
             </h1>
+            <span> order now</span>
         </div>
 
  
