--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mini Store</title>
+    <title>Mini Store </title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
@@ -103,6 +103,8 @@
             <div class="phn1"><img src="./image/product-item1.jpg" alt=""></div>
             <div class="phn2"><img src="./image/product-item2.jpg" alt=""></div>
             <div class="phn2"><img src="./image/product-item2.jpg" alt=""></div>
+            <div class="phn2"><img src="./image/product-item2.jpg" alt=""></div>
+            <div class="phn2"><img src="./image/product-item2.jpg" alt=""></div>
             <div class="phn3"><img src="./image/product-item3.jpg" alt=""></div>
             <div class="phn4"><img src="./image/product-item4.jpg" alt=""></div>
             <div class="phn4"><img src="./image/product-item4.jpg" alt=""></div>
@@ -135,7 +137,7 @@
             <h1>
                 Your Order on the way
             </h1>
-            <span> order now</span>
+            
         </div>
         <div class="turn">
             This is the end
