--- a/index.html
+++ b/index.html
@@ -137,9 +137,22 @@
             </h1>
             
         </div>
-        <div class="turn">
-            This is the end
-        </div>
+       <div>
+        <footer>
+            <div class="foot">
+                <div class="fleft">
+                    <h3>Mini Store</h3>
+                    <p>© 2024 Mini Store. All rights reserved.</p>
+                </div>
+                <div class="fright">
+                    <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                </div>
+            </div>
+        </footer>
+       </div>
 
 
 
